added challange button to leaderboard

--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -29,6 +29,11 @@
          {{profile.about}}
        </div>
        <div class="col-xs-12">
+         <span class="glyphicon glyphicon-gift">
+           <button type="button" class="btn btn-success">Challange!</button>
+         </span>
+       </div>
+       <div class="col-xs-12">
          friend's total points:{{totalPoints}} <!--{{getFriendTotalPoints _id}}-->
        </div>
        <div class="col-xs-6">
