--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -30,7 +30,7 @@
        </div>
        <div class="col-xs-12">
          <span class="glyphicon glyphicon-gift">
-           <button type="button" class="btn btn-success">Challange!</button>
+           <button type="button" class="btn btn-success btn-sm">Challange!</button>
          </span>
        </div>
        <div class="col-xs-12">
