friend being challenged will be set in a session variable

--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -6,6 +6,7 @@
     {{/with}}
     <h2>{{title}}</h2>
     <div class="row">
+      {{> challengeModal}}
       <div class="col-xs-12">
         {{#each friends}}
           {{> leaderboardFriend}}
