--- a/Jaunt/client/view/leaderboard/challenge/challengeModal.html
+++ b/Jaunt/client/view/leaderboard/challenge/challengeModal.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" id="js-challangeModal-save">Challange</button>
+          <button type="button" class="btn btn-primary" id="js-challengeModal-save">Challange</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
         </div>
 
