--- a/Jaunt/client/view/user/user.html
+++ b/Jaunt/client/view/user/user.html
@@ -17,6 +17,11 @@
       </div>
     </div>
     <!-- closes row -->
+    <div class="col-md-12">
+      {{#each challenges}}
+        {{> userChallenges}}
+      {{/each}}
+    </div>
     {{> timeline}}
   </div>
   {{else}}
@@ -41,4 +46,10 @@
   Total Points: {{totalPoints}}<br>
   Points from comments: {{commentPoints}}<br>
   Points from Posts: {{postPoints}}
+</template>
+
+<template name="userChallenges">
+  <div class="bg-warning row">
+    <span class="text-danger">{{challengedByUserName}} challenged you to <b>comment</b> on {{ChallengedOn}}</span>
+  </div>
 </template>
