the data in which the player was challenged is now formated

--- a/Jaunt/client/view/user/user.html
+++ b/Jaunt/client/view/user/user.html
@@ -50,6 +50,6 @@
 
 <template name="userChallenges">
   <div class="bg-warning row">
-    <span class="text-danger">{{challengedByUserName}} challenged you to <b>comment</b> on {{ChallengedOn}}</span>
+    <span class="text-danger">{{challengedByUserName}} challenged you to <b>comment</b> on {{formatedDate ChallengedOn}}</span>
   </div>
 </template>
