--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -28,6 +28,7 @@
           <span class='text-muted userNameOnComment'><a href="/user/{{userId}}" class='postAuthor'>{{userName}}</a>:</span>
           {{#if isEmoticonEnabled}}
             <span class='textOnComment'>{{{parseEmoticons text}}}</span><br>
+            <span class='textOnComment'>{{parseEmoticons text}}</span><br>
           {{else}}
             <span class='textOnComment'>{{text}}</span><br>
           {{/if}}
